force-app/main/default/objects/Product_Inventory__c/fields/Assembly_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Time_Days__c</fullName>
    <label>Assembly Time (Days)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>