force-app/main/default/objects/Product_Inventory__c/fields/Monthly_Delivery_Capacity_Units__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Delivery_Capacity_Units__c</fullName>
    <label>Monthly Delivery Capacity (Units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>