force-app/main/default/objects/Product_Inventory__c/fields/On_Hand_Stock_Units__c.field-meta.xml
<CustomField>
    <fullName>On_Hand_Stock_Units__c</fullName>
    <label>On-Hand Stock (Units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>